# Rendering-For-Fun

./: .gitignore  CMakeLists.txt  README.md  bootstrap.py
CMake/: CommonMacros.txt  ThirdPartyLibraries.cmake  imgui.cmake
Engine/FilterEnvmap/: CMakeLists.txt
Engine/MeshConvert/: CMakeLists.txt
Engine/MeshConvert/src/: main.cpp
Engine/OpenGLSrc/: CMakeLists.txt
Engine/OpenGLSrc/src/: main.cpp
Engine/SceneConverter/: CMakeLists.txt
Engine/SceneConverter/src/: main.cpp
Engine/VulkanSrc/: CMakeLists.txt
Engine/VulkanSrc/src/: main.cpp
data/: .gitignore  sceneconverter.json
data/cubemap/: spaichingen_hill_2k_irradiance.hdr
data/meshes/: test.materials  test2.materials  test2.scene
data/shaders/: GL02.frag  GL02.geom  GL02.vert  GL03_cube.frag  GL03_cube.vert  GL03_duck.frag  GL03_duck.vert  GLBufferDeclarations.h  GridCalculations.h  GridParameters.h  Lines.frag  Lines.vert  PBR.frag  PBR.vert  VK01.frag  VK01.vert  VK02.frag  VK02.geom  VK02.vert  VK03_compute_texture.comp  VK04_compute_mesh.comp  VK04_compute_texture.comp  VK04_render.frag  VK04_render_color.frag  Vk04_render.vert  grid.frag  grid.vert  imgui.frag  imgui.vert  imgui_multi.frag  mesh.frag  mesh.vert  mesh_inst.frag  mesh_inst.geom  mesh_inst.vert  quad.frag  quad.vert  texture_array.frag  texture_array.vert
shared/: Bitmap.h  CMakeLists.txt  Camera.h  EasyProfilerWrapper.h  Graph.h  Utils.cpp  Utils.h  UtilsCubemap.cpp  UtilsCubemap.h  UtilsFPS.h  UtilsMath.h  UtilsVulkan.cpp  UtilsVulkan.h  debug.h  imgui_wrapper.cpp
shared/glFramework/: GLFWApp.h  GLMesh.h  GLSceneData.cpp  GLSceneData.h  GLShader.cpp  GLShader.h  GLTexture.cpp  GLTexture.h
shared/scene/: Material.cpp  Material.h  MergeUtil.cpp  MergeUtil.h  Scene.cpp  Scene.h  VtxData.cpp  VtxData.h  vec4.h
shared/vkFramework/: Renderer.h  VulkanApp.cpp  VulkanApp.h  VulkanResources.cpp  VulkanResources.h
shared/vkRenderers/: VulkanCanvas.cpp  VulkanCanvas.h  VulkanClear.cpp  VulkanClear.h  VulkanComputedImage.cpp  VulkanComputedImage.h  VulkanComputedItem.cpp  VulkanComputedItem.h  (+18 more)
(+1 files in other folders)
